diesel_compile_tests/tests/fail/sqlite_insert_or_ignore_cannot_be_used_on_pg.rs
extern crate diesel;

use diesel::*;

table! {
    users {
        id -> Integer,
    }
}

#[derive(Insertable)]
#[diesel(table_name = users)]
struct User {
    id: i32,
}

fn main() {
    let mut connection = PgConnection::establish("").unwrap();
    insert_or_ignore_into(users::table)
        .values(users::id.eq(1))
        .execute(&mut connection)
        .unwrap();
}
