diesel_compile_tests/tests/fail/sqlite_insert_or_ignore_cannot_be_used_on_pg.stderr
error[E0277]: the trait bound `diesel::query_builder::insert_statement::private::InsertOrIgnore: QueryFragment<Pg>` is not satisfied
  --> tests/fail/sqlite_insert_or_ignore_cannot_be_used_on_pg.rs:21:18
   |
21 |         .execute(&mut connection)
   |          ------- ^^^^^^^^^^^^^^^ the trait `QueryFragment<Pg>` is not implemented for `diesel::query_builder::insert_statement::private::InsertOrIgnore`
   |          |
   |          required by a bound introduced by this call
   |
   = help: the following other types implement trait `QueryFragment<DB, SP>`:
             <diesel::query_builder::insert_statement::private::InsertOrIgnore as QueryFragment<Mysql>>
             <diesel::query_builder::insert_statement::private::InsertOrIgnore as QueryFragment<Sqlite>>
   = note: required for `InsertStatement<table, ValuesClause<ColumnInsertValue<id, Bound<Integer, i32>>, table>, InsertOrIgnore>` to implement `QueryFragment<Pg>`
   = note: required for `InsertStatement<table, ValuesClause<ColumnInsertValue<id, Bound<Integer, i32>>, table>, InsertOrIgnore>` to implement `ExecuteDsl<diesel::PgConnection, Pg>`
note: required by a bound in `diesel::RunQueryDsl::execute`
  --> $DIESEL/src/query_dsl/mod.rs
   |
   |         Self: methods::ExecuteDsl<Conn>,
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::execute`
